@startuml

title __OCP's Class Diagram__\n

  namespace com.atguigu.principle.ocp {
    class com.atguigu.principle.ocp.Circle {
        ~ Circle()
    }
  }
  

  namespace com.atguigu.principle.ocp {
    class com.atguigu.principle.ocp.GraphicEditor {
        + drawCircle()
        + drawRectangle()
        + drawShape()
        + drawTriangle()
    }
  }
  

  namespace com.atguigu.principle.ocp {
    class com.atguigu.principle.ocp.Ocp {
        {static} + main()
    }
  }
  

  namespace com.atguigu.principle.ocp {
    class com.atguigu.principle.ocp.Rectangle {
        ~ Rectangle()
    }
  }
  

  namespace com.atguigu.principle.ocp {
    class com.atguigu.principle.ocp.Shape {
        ~ m_type : int
    }
  }
  

  namespace com.atguigu.principle.ocp {
    class com.atguigu.principle.ocp.Triangle {
        ~ Triangle()
    }
  }
  

  com.atguigu.principle.ocp.Circle -up-|> com.atguigu.principle.ocp.Shape
  com.atguigu.principle.ocp.Rectangle -up-|> com.atguigu.principle.ocp.Shape
  com.atguigu.principle.ocp.Triangle -up-|> com.atguigu.principle.ocp.Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
